--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ script:
 deploy:
   - provider: firebase
     token: $FIREBASE_TOKEN
-# after_success:
-#  - firebase deploy --token $FIREBASE_TOKEN
+
+after_success:
+ - firebase deploy --token $FIREBASE_TOKEN
