--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ install:
   - npm install
   - npm install -g firebase-tools
 script:
+  - echo 'Testing something'
+  - echo $REACT_APP_FIREBASE_API_KEY
   - npm run build
 after_success:
  - firebase deploy --token $FIREBASE_TOKEN
